Fix windows build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,24 +17,39 @@ ENDIF()
 add_executable(vulkii
 src/main.cpp
 )
+IF (WIN32)
+  if(EXISTS "${SDL2_PATH}/lib/x64/SDL2.lib")
+  else()
+	message(FATAL_ERROR "Please provide path to SLD2! e.g. -D SDL2_PATH=C:/SDL2")
+  endif()
+  add_custom_command(TARGET vulkii POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "${SDL2_PATH}/lib/x64/SDL2.dll"
+        $<TARGET_FILE_DIR:vulkii>)
+  set (SPIRV_TOOLS_LIB "$ENV{VULKAN_SDK}/lib/SPIRV-Tools-shared.lib")
+  set (LIBS "${SDL2_PATH}/lib/x64/SDL2.lib" "${SDL2_PATH}/lib/x64/SDL2main.lib")
+  set (INCLUDES "${SDL2_PATH}/include")
+ELSE()
+  set (SPIRV_TOOLS_LIB "$ENV{VULKAN_SDK}/lib/libSPIRV-Tools-shared.so")
+  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
+	-march=skylake \
+	-pedantic-errors -Wall -Wextra -Werror -ferror-limit=1 \
+	-Wno-c99-extensions -Wno-comment \
+	-fno-exceptions -fno-rtti -fvisibility=hidden")
+  set (LIBS pthread ncurses z dl)
+  set (INCLUDES "")
+ENDIF()
 target_include_directories(vulkii
   PRIVATE
-  3rdparty
   include
-  3rdparty/imgui
+  ${INCLUDES}
   "$ENV{VULKAN_SDK}/include"
   ${CMAKE_SOURCE_DIR}
   ${CMAKE_BINARY_DIR}
 )
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
--march=skylake \
--pedantic-errors -Wall -Wextra -Werror -ferror-limit=1 \
--Wno-c99-extensions -Wno-comment \
--fno-exceptions -fno-rtti -fvisibility=hidden")
 target_link_libraries(vulkii
-"$ENV{VULKAN_SDK}/lib/libSPIRV-Tools-shared.so"
+${SPIRV_TOOLS_LIB}
 ${Vulkan_LIBRARY}
-SDL2
-pthread
-ncurses z dl)
+${LIBS}
+)
