Add GLSL compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,18 +27,23 @@ IF (WIN32)
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
         "${SDL2_PATH}/lib/x64/SDL2.dll"
         $<TARGET_FILE_DIR:vulkii>)
-  set (SPIRV_TOOLS_LIB "$ENV{VULKAN_SDK}/lib/SPIRV-Tools-shared.lib")
-  set (LIBS "${SDL2_PATH}/lib/x64/SDL2.lib" "${SDL2_PATH}/lib/x64/SDL2main.lib")
+  set (LIBS "${SDL2_PATH}/lib/x64/SDL2.lib"
+    "${SDL2_PATH}/lib/x64/SDL2main.lib"
+    "$ENV{VULKAN_SDK}/lib/SPIRV-Tools-shared.lib"
+    "$ENV{VULKAN_SDK}/lib/libshaderc_shared.lib"
+    )
   set (INCLUDES "${SDL2_PATH}/include")
 ELSE()
-  set (SPIRV_TOOLS_LIB "$ENV{VULKAN_SDK}/lib/libSPIRV-Tools-shared.so")
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
 	-march=skylake \
 	-pedantic-errors -Wall -Wextra -Werror -ferror-limit=1 \
 	-Wno-c99-extensions -Wno-comment \
 	-fno-exceptions -fno-rtti -fvisibility=hidden")
-  set (LIBS SDL2 pthread ncurses z dl)
+  set (LIBS SDL2 pthread ncurses z dl
+    "$ENV{VULKAN_SDK}/lib/libSPIRV-Tools-shared.so"
+    "$ENV{VULKAN_SDK}/lib/libshaderc_shared.so"
+    )
   set (INCLUDES "")
 ENDIF()
 target_include_directories(vulkii
@@ -50,7 +55,6 @@ target_include_directories(vulkii
   ${CMAKE_BINARY_DIR}
 )
 target_link_libraries(vulkii
-${SPIRV_TOOLS_LIB}
 ${Vulkan_LIBRARY}
 ${LIBS}
 )
