--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,19
-Size=218,1038
+Pos=422,19
+Size=1498,197
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000D,0
 
 [Window][Delete?]
 Pos=805,469
@@ -27,10 +27,10 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Example: Log]
-Pos=909,441
-Size=743,298
+Pos=422,19
+Size=1498,197
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000D,1
 
 [Window][Stacked 1]
 Pos=718,410
@@ -50,17 +50,38 @@ Collapsed=0
 
 [Window][Config]
 Pos=0,19
-Size=332,1038
+Size=420,197
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000C,0
+
+[Window][sw rasterization]
+Pos=0,218
+Size=968,839
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][hw rasterization]
+Pos=970,218
+Size=950,839
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Dear ImGui Style Editor]
+Pos=60,60
+Size=339,856
+Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
-  DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=743,300 Split=Y
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=743,300 Selected=0x32FFF4A6
-    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=743,298 Selected=0x46B5E99C
-  DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=743,298 Selected=0xBF126D42
-DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1038 Split=X
-  DockNode    ID=0x00000006 Parent=0x09EF459F SizeRef=332,1038 CentralNode=1 Selected=0xD3262A4A
-  DockNode    ID=0x00000007 Parent=0x09EF459F SizeRef=1586,1038 Selected=0x0DA19904
+DockNode        ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
+  DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
+  DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
+DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1038 Split=Y
+  DockNode      ID=0x0000000A Parent=0x09EF459F SizeRef=1920,197 Split=X Selected=0xD3262A4A
+    DockNode    ID=0x0000000C Parent=0x0000000A SizeRef=420,197 Selected=0xD3262A4A
+    DockNode    ID=0x0000000D Parent=0x0000000A SizeRef=1498,197 Selected=0xBF126D42
+  DockNode      ID=0x0000000B Parent=0x09EF459F SizeRef=1920,839 Split=X
+    DockNode    ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
+      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=968,1038 CentralNode=1 Selected=0xB861CE51
+      DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=950,1038 Selected=0x049DDB72
+    DockNode    ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
 
