--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=932,19
-Size=988,446
+Pos=0,543
+Size=708,514
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000004,0
 
 [Window][Delete?]
 Pos=805,469
@@ -50,21 +50,21 @@ Collapsed=0
 
 [Window][Config]
 Pos=0,19
-Size=930,446
+Size=1310,522
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][sw rasterization]
-Pos=0,467
-Size=909,590
+Pos=710,543
+Size=605,514
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000005,0
 
 [Window][hw rasterization]
-Pos=932,19
-Size=988,446
+Pos=1312,19
+Size=608,522
 Collapsed=0
-DockId=0x0000000D,1
+DockId=0x0000000D,0
 
 [Window][Dear ImGui Style Editor]
 Pos=60,60
@@ -72,22 +72,24 @@ Size=339,856
 Collapsed=0
 
 [Window][meshlet rasterization]
-Pos=911,467
-Size=1009,590
+Pos=1317,543
+Size=603,514
 Collapsed=0
 DockId=0x00000009,0
 
 [Docking][Data]
-DockNode        ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
-  DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
-  DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
-DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1038 Split=Y
-  DockNode      ID=0x0000000A Parent=0x09EF459F SizeRef=1920,446 Split=X Selected=0xD3262A4A
-    DockNode    ID=0x0000000C Parent=0x0000000A SizeRef=930,197 Selected=0xD3262A4A
-    DockNode    ID=0x0000000D Parent=0x0000000A SizeRef=988,197 Selected=0x049DDB72
-  DockNode      ID=0x0000000B Parent=0x09EF459F SizeRef=1920,590 Split=X
-    DockNode    ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
-      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=909,1038 CentralNode=1 Selected=0xB861CE51
-      DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=1009,1038 Selected=0xB39CC568
-    DockNode    ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
+DockNode          ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
+  DockNode        ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
+  DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1038 Split=Y
+  DockNode        ID=0x0000000A Parent=0x09EF459F SizeRef=1920,522 Split=X Selected=0xD3262A4A
+    DockNode      ID=0x0000000C Parent=0x0000000A SizeRef=1310,197 Selected=0xD3262A4A
+    DockNode      ID=0x0000000D Parent=0x0000000A SizeRef=608,197 Selected=0x049DDB72
+  DockNode        ID=0x0000000B Parent=0x09EF459F SizeRef=1920,514 Split=X
+    DockNode      ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
+      DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=1315,1038 Split=X Selected=0xB861CE51
+        DockNode  ID=0x00000004 Parent=0x00000008 SizeRef=708,538 Selected=0xE927CF2F
+        DockNode  ID=0x00000005 Parent=0x00000008 SizeRef=605,538 CentralNode=1 Selected=0xB861CE51
+      DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=603,1038 Selected=0xB39CC568
+    DockNode      ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
 
