--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,26 +15,13 @@ ELSE()
   message(STATUS "$ENV{VULKAN_SDK}/include")
 ENDIF()
 add_subdirectory(3rdparty/meshoptimizer)
-add_executable(vulkii
-src/main.cpp
-src/vk_backend.cpp
-src/files.cpp
-3rdparty/imgui/imgui.cpp
-3rdparty/imgui/imgui_widgets.cpp
-3rdparty/imgui/imgui_draw.cpp
-3rdparty/imgui/imgui_demo.cpp
-3rdparty/imgui/examples/imgui_impl_sdl.cpp
-)
+
 IF (WIN32)
   set(SDL2_PATH ${CMAKE_SOURCE_DIR}/bin/SDL2)
   if(EXISTS "${SDL2_PATH}/lib/x64/SDL2.lib")
   else()
-	message(FATAL_ERROR "Please provide path to SLD2! e.g. -D SDL2_PATH=C:/SDL2")
+  message(FATAL_ERROR "Please provide path to SLD2! e.g. -D SDL2_PATH=C:/SDL2")
   endif()
-  add_custom_command(TARGET vulkii POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${SDL2_PATH}/lib/x64/SDL2.dll"
-        $<TARGET_FILE_DIR:vulkii>)
   set (LIBS "${SDL2_PATH}/lib/x64/SDL2.lib"
     "${SDL2_PATH}/lib/x64/SDL2main.lib"
     "$ENV{VULKAN_SDK}/lib/SPIRV-Tools-shared.lib"
@@ -42,7 +29,6 @@ IF (WIN32)
     "$ENV{VULKAN_SDK}/lib/spirv-cross-core.lib"
     )
   set (INCLUDES "${SDL2_PATH}/include")
-  set_property(TARGET vulkii PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
   set(CompilerFlags
       CMAKE_CXX_FLAGS
       CMAKE_CXX_FLAGS_DEBUG
@@ -58,10 +44,10 @@ IF (WIN32)
 ELSE()
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
-	-march=skylake \
-	-pedantic-errors -Wall -Wextra -Werror -ferror-limit=1 \
-	-Wno-c99-extensions -Wno-comment \
-	-fno-exceptions -fno-rtti -fvisibility=hidden")
+  -march=skylake \
+  -pedantic-errors -Wall -Wextra -Werror -ferror-limit=1 \
+  -Wno-c99-extensions -Wno-comment \
+  -fno-exceptions -fno-rtti -fvisibility=hidden")
   set (LIBS SDL2 pthread ncurses z dl
     "$ENV{VULKAN_SDK}/lib/libSPIRV-Tools-shared.so"
     "$ENV{VULKAN_SDK}/lib/libshaderc_shared.so"
@@ -69,18 +55,45 @@ ELSE()
     )
   set (INCLUDES "")
 ENDIF()
-target_include_directories(vulkii
-  PRIVATE
-  3rdparty
-  3rdparty/imgui
-  include
-  ${INCLUDES}
-  "$ENV{VULKAN_SDK}/include"
-  ${CMAKE_SOURCE_DIR}
-  ${CMAKE_BINARY_DIR}
-)
-target_link_libraries(vulkii
-${Vulkan_LIBRARY}
-meshoptimizer
-${LIBS}
-)
+
+function(ADD_EXAMPLE example_name example_file)
+    add_executable(${example_name}
+    ${example_file}
+    src/vk_backend.cpp
+    src/files.cpp
+    3rdparty/imgui/imgui.cpp
+    3rdparty/imgui/imgui_widgets.cpp
+    3rdparty/imgui/imgui_draw.cpp
+    3rdparty/imgui/imgui_demo.cpp
+    3rdparty/imgui/examples/imgui_impl_sdl.cpp
+    )
+    IF (WIN32)
+      add_custom_command(TARGET ${example_name} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            "${SDL2_PATH}/lib/x64/SDL2.dll"
+            $<TARGET_FILE_DIR:${example_name}>)
+      set_property(TARGET ${example_name} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
+    ELSE()
+    ENDIF()
+    target_include_directories(${example_name}
+      PRIVATE
+      3rdparty
+      3rdparty/imgui
+      include
+      ${INCLUDES}
+      "$ENV{VULKAN_SDK}/include"
+      ${CMAKE_SOURCE_DIR}
+      ${CMAKE_BINARY_DIR}
+    )
+    target_link_libraries(${example_name}
+    ${Vulkan_LIBRARY}
+    meshoptimizer
+    ${LIBS}
+    )
+
+endfunction()
+
+add_example(compute_rasterization examples/compute_rasterization.cpp)
+add_example(draw_indirect examples/draw_indirect.cpp)
+add_example(gpu_feedback examples/gpu_feedback.cpp)
+add_example(simple_rendering examples/simple_rendering.cpp)
