--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,530
-Size=675,527
+Pos=0,920
+Size=675,137
 Collapsed=0
 DockId=0x00000004,0
 
@@ -50,9 +50,9 @@ Collapsed=0
 
 [Window][Config]
 Pos=0,19
-Size=671,509
+Size=919,899
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000010,0
 
 [Window][sw rasterization]
 Pos=677,530
@@ -83,17 +83,31 @@ Size=614,509
 Collapsed=0
 DockId=0x0000000F,0
 
+[Window][postprocess_pass]
+Pos=0,19
+Size=919,899
+Collapsed=0
+DockId=0x00000010,1
+
+[Window][uv feedback]
+Pos=921,19
+Size=999,899
+Collapsed=0
+DockId=0x00000011,0
+
 [Docking][Data]
 DockNode          ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
   DockNode        ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
   DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
 DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1038 Split=Y
-  DockNode        ID=0x0000000A Parent=0x09EF459F SizeRef=1920,509 Split=X Selected=0xD3262A4A
+  DockNode        ID=0x0000000A Parent=0x09EF459F SizeRef=1920,899 Split=X Selected=0xD3262A4A
     DockNode      ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
-      DockNode    ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Selected=0xD3262A4A
+      DockNode    ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0xD3262A4A
+        DockNode  ID=0x00000010 Parent=0x0000000E SizeRef=919,509 Selected=0x93643EC0
+        DockNode  ID=0x00000011 Parent=0x0000000E SizeRef=999,509 Selected=0x2A5FA310
       DockNode    ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
     DockNode      ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
-  DockNode        ID=0x0000000B Parent=0x09EF459F SizeRef=1920,527 Split=X
+  DockNode        ID=0x0000000B Parent=0x09EF459F SizeRef=1920,137 Split=X
     DockNode      ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
       DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=X Selected=0xB861CE51
         DockNode  ID=0x00000004 Parent=0x00000008 SizeRef=675,538 Selected=0xE927CF2F
