--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,3 +97,4 @@ add_example(compute_rasterization examples/compute_rasterization.cpp)
 add_example(draw_indirect examples/draw_indirect.cpp)
 add_example(gpu_feedback examples/gpu_feedback.cpp)
 add_example(simple_rendering examples/simple_rendering.cpp)
+add_example(mesh_lod examples/mesh_lod.cpp)
