--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,920
-Size=675,137
+Pos=0,815
+Size=660,242
 Collapsed=0
 DockId=0x00000004,0
 
@@ -49,20 +49,20 @@ Size=1920,1057
 Collapsed=0
 
 [Window][Config]
-Pos=0,19
-Size=919,899
+Pos=662,815
+Size=1258,242
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x00000005,0
 
 [Window][sw rasterization]
-Pos=677,530
-Size=615,527
+Pos=662,557
+Size=630,500
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][hw rasterization]
 Pos=1289,19
-Size=631,509
+Size=631,536
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -72,46 +72,67 @@ Size=339,856
 Collapsed=0
 
 [Window][meshlet rasterization]
-Pos=1294,530
-Size=626,527
+Pos=1294,557
+Size=626,500
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][depth prepass]
 Pos=673,19
-Size=614,509
+Size=614,536
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][postprocess_pass]
 Pos=0,19
-Size=919,899
+Size=960,843
 Collapsed=0
-DockId=0x00000010,1
+DockId=0x00000010,0
 
 [Window][uv feedback]
-Pos=921,19
-Size=999,899
+Pos=962,19
+Size=958,843
 Collapsed=0
 DockId=0x00000011,0
 
+[Window][output color]
+Pos=177,249
+Size=204,213
+Collapsed=0
+
+[Window][color node editor]
+Pos=610,19
+Size=1310,1038
+Collapsed=0
+DockId=0x00000013,0
+
+[Window][pass]
+Pos=0,19
+Size=1920,794
+Collapsed=0
+DockId=0x00000014,0
+
 [Docking][Data]
-DockNode          ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
-  DockNode        ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
-  DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
-DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1038 Split=Y
-  DockNode        ID=0x0000000A Parent=0x09EF459F SizeRef=1920,899 Split=X Selected=0xD3262A4A
-    DockNode      ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
-      DockNode    ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0xD3262A4A
-        DockNode  ID=0x00000010 Parent=0x0000000E SizeRef=919,509 Selected=0x93643EC0
-        DockNode  ID=0x00000011 Parent=0x0000000E SizeRef=999,509 Selected=0x2A5FA310
-      DockNode    ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
-    DockNode      ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
-  DockNode        ID=0x0000000B Parent=0x09EF459F SizeRef=1920,137 Split=X
-    DockNode      ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
-      DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=X Selected=0xB861CE51
-        DockNode  ID=0x00000004 Parent=0x00000008 SizeRef=675,538 Selected=0xE927CF2F
-        DockNode  ID=0x00000005 Parent=0x00000008 SizeRef=615,538 CentralNode=1 Selected=0xB861CE51
-      DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
-    DockNode      ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
+DockNode              ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
+  DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
+  DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
+DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1038 Split=Y
+  DockNode            ID=0x00000014 Parent=0x09EF459F SizeRef=1920,794 Selected=0xCE70D424
+  DockNode            ID=0x00000015 Parent=0x09EF459F SizeRef=1920,242 Split=X
+    DockNode          ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
+      DockNode        ID=0x0000000A Parent=0x00000012 SizeRef=1920,843 Split=X Selected=0xD3262A4A
+        DockNode      ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
+          DockNode    ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
+            DockNode  ID=0x00000010 Parent=0x0000000E SizeRef=960,843 Selected=0x93643EC0
+            DockNode  ID=0x00000011 Parent=0x0000000E SizeRef=958,843 Selected=0x2A5FA310
+          DockNode    ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
+        DockNode      ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
+      DockNode        ID=0x0000000B Parent=0x00000012 SizeRef=1920,193 Split=X
+        DockNode      ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
+          DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=X Selected=0xB861CE51
+            DockNode  ID=0x00000004 Parent=0x00000008 SizeRef=660,538 Selected=0xE927CF2F
+            DockNode  ID=0x00000005 Parent=0x00000008 SizeRef=630,538 CentralNode=1 Selected=0xD3262A4A
+          DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
+        DockNode      ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
+    DockNode          ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
 
