--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,812
-Size=660,245
+Pos=567,540
+Size=665,517
 Collapsed=0
 DockId=0x00000004,0
 
@@ -49,16 +49,16 @@ Size=1920,1057
 Collapsed=0
 
 [Window][Config]
-Pos=662,812
-Size=1258,245
+Pos=0,19
+Size=565,524
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000018,0
 
 [Window][sw rasterization]
 Pos=662,557
 Size=630,500
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000008,0
 
 [Window][hw rasterization]
 Pos=1289,19
@@ -84,16 +84,16 @@ Collapsed=0
 DockId=0x0000000F,0
 
 [Window][postprocess_pass]
-Pos=0,19
-Size=957,791
+Pos=567,19
+Size=662,519
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][uv feedback]
-Pos=959,19
-Size=961,791
+Pos=1234,540
+Size=686,517
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x00000005,0
 
 [Window][output color]
 Pos=177,249
@@ -112,27 +112,57 @@ Size=1920,794
 Collapsed=0
 DockId=0x00000014,0
 
+[Window][position baked]
+Pos=0,545
+Size=565,512
+Collapsed=0
+DockId=0x00000019,0
+
+[Window][compute rendering]
+Pos=567,540
+Size=665,517
+Collapsed=0
+DockId=0x00000004,1
+
+[Window][normals baked]
+Pos=1231,19
+Size=689,519
+Collapsed=0
+DockId=0x0000001B,0
+
+[Window][main viewport]
+Pos=567,19
+Size=662,519
+Collapsed=0
+DockId=0x0000001A,0
+
 [Docking][Data]
-DockNode              ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
-  DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
-  DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
-DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1038 Split=Y
-  DockNode            ID=0x00000014 Parent=0x09EF459F SizeRef=1920,794 Selected=0xCE70D424
-  DockNode            ID=0x00000015 Parent=0x09EF459F SizeRef=1920,242 Split=X
-    DockNode          ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
-      DockNode        ID=0x0000000A Parent=0x00000012 SizeRef=1920,791 Split=X Selected=0xD3262A4A
-        DockNode      ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
-          DockNode    ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
-            DockNode  ID=0x00000010 Parent=0x0000000E SizeRef=957,843 Selected=0x93643EC0
-            DockNode  ID=0x00000011 Parent=0x0000000E SizeRef=961,843 Selected=0x2A5FA310
-          DockNode    ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
-        DockNode      ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
-      DockNode        ID=0x0000000B Parent=0x00000012 SizeRef=1920,245 Split=X
-        DockNode      ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
-          DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=X Selected=0xB861CE51
-            DockNode  ID=0x00000004 Parent=0x00000008 SizeRef=660,538 Selected=0xE927CF2F
-            DockNode  ID=0x00000005 Parent=0x00000008 SizeRef=630,538 CentralNode=1 Selected=0xD3262A4A
-          DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
-        DockNode      ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
-    DockNode          ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
+DockNode                  ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
+  DockNode                ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
+  DockNode                ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
+DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1038 Split=X
+  DockNode                ID=0x00000016 Parent=0x09EF459F SizeRef=565,1038 Split=Y Selected=0xD3262A4A
+    DockNode              ID=0x00000018 Parent=0x00000016 SizeRef=565,524 Selected=0xD3262A4A
+    DockNode              ID=0x00000019 Parent=0x00000016 SizeRef=565,512 Selected=0xC62906FD
+  DockNode                ID=0x00000017 Parent=0x09EF459F SizeRef=1353,1038 Split=Y
+    DockNode              ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
+    DockNode              ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
+      DockNode            ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
+        DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=1920,519 Split=X Selected=0xD3262A4A
+          DockNode        ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
+            DockNode      ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
+              DockNode    ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
+              DockNode    ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Split=X Selected=0xC62906FD
+                DockNode  ID=0x0000001A Parent=0x00000011 SizeRef=662,269 Selected=0x961573DF
+                DockNode  ID=0x0000001B Parent=0x00000011 SizeRef=689,269 Selected=0x433F425D
+            DockNode      ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
+          DockNode        ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
+        DockNode          ID=0x0000000B Parent=0x00000012 SizeRef=1920,517 Split=X
+          DockNode        ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
+            DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=X Selected=0xD3262A4A
+              DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=665,116 Selected=0x15D532B9
+              DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=686,116 CentralNode=1 Selected=0x2A5FA310
+            DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
+          DockNode        ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
+      DockNode            ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
 
