--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,3 +98,4 @@ add_example(draw_indirect examples/draw_indirect.cpp)
 add_example(gpu_feedback examples/gpu_feedback.cpp)
 add_example(simple_rendering examples/simple_rendering.cpp)
 add_example(mesh_lod examples/mesh_lod.cpp)
+add_example(simple_compute examples/simple_compute.cpp)
