Add oit example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,3 +99,4 @@ add_example(gpu_feedback examples/gpu_feedback.cpp)
 add_example(simple_rendering examples/simple_rendering.cpp)
 add_example(mesh_lod examples/mesh_lod.cpp)
 add_example(simple_compute examples/simple_compute.cpp)
+add_example(oit examples/oit.cpp)
