--- a/imgui.ini
+++ b/imgui.ini
@@ -5,9 +5,9 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,0
-Size=702,109
+Size=936,581
 Collapsed=0
-DockId=0x0000001F,0
+DockId=0x0000001A,1
 
 [Window][Delete?]
 Pos=805,469
@@ -45,14 +45,14 @@ DockId=0x00000007,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=702,512
+Size=1920,1057
 Collapsed=0
 
 [Window][Config]
-Pos=0,111
-Size=321,401
+Pos=0,0
+Size=936,581
 Collapsed=0
-DockId=0x00000018,0
+DockId=0x0000001A,0
 
 [Window][sw rasterization]
 Pos=662,557
@@ -131,9 +131,10 @@ Collapsed=0
 DockId=0x00000011,0
 
 [Window][main viewport]
-Pos=310,244
-Size=379,387
+Pos=938,0
+Size=982,1057
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Example: Custom Node Graph]
 Pos=411,19
@@ -151,29 +152,40 @@ DockId=0x0000001D,0
 Pos=609,19
 Size=585,537
 Collapsed=0
-DockId=0x0000001F,1
+DockId=0x0000001C,1
 
 [Window][Feedback 2]
 Pos=0,19
 Size=607,537
 Collapsed=0
-DockId=0x0000001E,0
+DockId=0x0000001C,0
+
+[Window][Dear ImGui Metrics]
+Pos=59,195
+Size=338,256
+Collapsed=0
+
+[Window][Scene]
+Pos=0,583
+Size=936,474
+Collapsed=0
+DockId=0x0000001B,0
 
 [Docking][Data]
 DockNode                  ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
   DockNode                ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
   DockNode                ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
-DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=702,512 Split=Y
-  DockNode                ID=0x00000004 Parent=0x09EF459F SizeRef=1920,225 Split=X Selected=0x2B5F260E
-    DockNode              ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Split=X Selected=0xC90DB54B
-      DockNode            ID=0x0000001E Parent=0x0000001C SizeRef=607,537 Selected=0x5004E4F1
-      DockNode            ID=0x0000001F Parent=0x0000001C SizeRef=585,537 Selected=0xE927CF2F
+DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1057 Split=Y
+  DockNode                ID=0x00000004 Parent=0x09EF459F SizeRef=1920,126 Split=X Selected=0x2B5F260E
+    DockNode              ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
     DockNode              ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
-  DockNode                ID=0x00000005 Parent=0x09EF459F SizeRef=1920,830 Split=X
-    DockNode              ID=0x00000016 Parent=0x00000005 SizeRef=880,1038 Split=Y Selected=0xD3262A4A
-      DockNode            ID=0x00000018 Parent=0x00000016 SizeRef=565,524 Selected=0xD3262A4A
+  DockNode                ID=0x00000005 Parent=0x09EF459F SizeRef=1920,384 Split=X
+    DockNode              ID=0x00000016 Parent=0x00000005 SizeRef=249,1038 Split=Y Selected=0xD3262A4A
+      DockNode            ID=0x00000018 Parent=0x00000016 SizeRef=565,524 Split=Y Selected=0xD3262A4A
+        DockNode          ID=0x0000001A Parent=0x00000018 SizeRef=706,436 Selected=0xD3262A4A
+        DockNode          ID=0x0000001B Parent=0x00000018 SizeRef=706,356 Selected=0x18B8C0DE
       DockNode            ID=0x00000019 Parent=0x00000016 SizeRef=565,512 Selected=0xC62906FD
-    DockNode              ID=0x00000017 Parent=0x00000005 SizeRef=1038,1038 Split=Y
+    DockNode              ID=0x00000017 Parent=0x00000005 SizeRef=261,1038 Split=Y
       DockNode            ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
       DockNode            ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
         DockNode          ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
@@ -186,7 +198,7 @@ DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=702,512 S
             DockNode      ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
           DockNode        ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
             DockNode      ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
-              DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 CentralNode=1 Selected=0xD3262A4A
+              DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 CentralNode=1 Selected=0x961573DF
               DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
             DockNode      ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
         DockNode          ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
