--- a/imgui.ini
+++ b/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,0
-Size=936,581
+Size=90,281
 Collapsed=0
 DockId=0x0000001A,1
 
@@ -45,12 +45,12 @@ DockId=0x00000007,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1057
+Size=512,512
 Collapsed=0
 
 [Window][Config]
 Pos=0,0
-Size=936,581
+Size=90,281
 Collapsed=0
 DockId=0x0000001A,0
 
@@ -67,7 +67,7 @@ Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Dear ImGui Style Editor]
-Pos=60,60
+Pos=997,47
 Size=339,856
 Collapsed=0
 
@@ -131,8 +131,8 @@ Collapsed=0
 DockId=0x00000011,0
 
 [Window][main viewport]
-Pos=938,0
-Size=982,1057
+Pos=92,0
+Size=420,512
 Collapsed=0
 DockId=0x00000008,0
 
@@ -166,26 +166,37 @@ Size=338,256
 Collapsed=0
 
 [Window][Scene]
-Pos=0,583
-Size=936,474
+Pos=0,283
+Size=90,229
 Collapsed=0
 DockId=0x0000001B,0
+
+[Window][Column row selection]
+Pos=0,283
+Size=399,229
+Collapsed=0
+DockId=0x0000001B,1
+
+[Window][NN]
+Size=975,581
+Collapsed=0
+DockId=0x0000001A,2
 
 [Docking][Data]
 DockNode                  ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
   DockNode                ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
   DockNode                ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
-DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1057 Split=Y
+DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=512,512 Split=Y
   DockNode                ID=0x00000004 Parent=0x09EF459F SizeRef=1920,126 Split=X Selected=0x2B5F260E
     DockNode              ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
     DockNode              ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
   DockNode                ID=0x00000005 Parent=0x09EF459F SizeRef=1920,384 Split=X
-    DockNode              ID=0x00000016 Parent=0x00000005 SizeRef=249,1038 Split=Y Selected=0xD3262A4A
+    DockNode              ID=0x00000016 Parent=0x00000005 SizeRef=339,1038 Split=Y Selected=0xD3262A4A
       DockNode            ID=0x00000018 Parent=0x00000016 SizeRef=565,524 Split=Y Selected=0xD3262A4A
         DockNode          ID=0x0000001A Parent=0x00000018 SizeRef=706,436 Selected=0xD3262A4A
         DockNode          ID=0x0000001B Parent=0x00000018 SizeRef=706,356 Selected=0x18B8C0DE
       DockNode            ID=0x00000019 Parent=0x00000016 SizeRef=565,512 Selected=0xC62906FD
-    DockNode              ID=0x00000017 Parent=0x00000005 SizeRef=261,1038 Split=Y
+    DockNode              ID=0x00000017 Parent=0x00000005 SizeRef=1579,1038 Split=Y
       DockNode            ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
       DockNode            ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
         DockNode          ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
