--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ function(ADD_EXAMPLE example_name example_file)
     3rdparty/imgui/imgui_widgets.cpp
     3rdparty/imgui/imgui_draw.cpp
     3rdparty/imgui/imgui_demo.cpp
+    3rdparty/marching_cubes/marching_cubes.cpp
     3rdparty/ImGuiColorTextEdit/TextEditor.cpp
     ${INCLUDES_SRC}
     3rdparty/imguinodegrapheditor.h
