Fix validation errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,3 +113,4 @@ add_example(mesh_lod examples/mesh_lod.cpp)
 add_example(simple_compute examples/simple_compute.cpp)
 add_example(oit examples/oit.cpp)
 add_example(virtual_textures examples/virtual_textures.cpp)
+add_example(sdf examples/sdf.cpp)
