--- a/imgui.ini
+++ b/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,0
-Size=750,581
+Size=884,690
 Collapsed=0
 DockId=0x0000001A,1
 
@@ -45,12 +45,12 @@ DockId=0x00000007,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1057
+Size=2560,1387
 Collapsed=0
 
 [Window][Config]
 Pos=0,0
-Size=750,581
+Size=884,690
 Collapsed=0
 DockId=0x0000001A,0
 
@@ -116,7 +116,7 @@ DockId=0x00000014,0
 Pos=0,545
 Size=565,512
 Collapsed=0
-DockId=0x00000019,0
+DockId=0x00000016,0
 
 [Window][compute rendering]
 Pos=567,553
@@ -131,8 +131,8 @@ Collapsed=0
 DockId=0x00000011,0
 
 [Window][main viewport]
-Pos=752,0
-Size=1168,1057
+Pos=886,0
+Size=1674,1387
 Collapsed=0
 DockId=0x00000008,0
 
@@ -166,8 +166,8 @@ Size=338,256
 Collapsed=0
 
 [Window][Scene]
-Pos=0,583
-Size=750,474
+Pos=0,692
+Size=884,695
 Collapsed=0
 DockId=0x0000001B,0
 
@@ -175,42 +175,42 @@ DockId=0x0000001B,0
 Pos=0,283
 Size=399,229
 Collapsed=0
-DockId=0x0000001B,1
+DockId=0x00000016,1
 
 [Window][NN]
 Size=975,581
 Collapsed=0
-DockId=0x0000001A,2
+DockId=0x00000016,2
 
 [Docking][Data]
-DockNode                  ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
-  DockNode                ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
-  DockNode                ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
-DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1057 Split=Y
-  DockNode                ID=0x00000004 Parent=0x09EF459F SizeRef=1920,126 Split=X Selected=0x2B5F260E
-    DockNode              ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
-    DockNode              ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
-  DockNode                ID=0x00000005 Parent=0x09EF459F SizeRef=1920,384 Split=X
-    DockNode              ID=0x00000016 Parent=0x00000005 SizeRef=750,1038 Split=Y Selected=0xD3262A4A
-      DockNode            ID=0x00000018 Parent=0x00000016 SizeRef=565,524 Split=Y Selected=0xD3262A4A
-        DockNode          ID=0x0000001A Parent=0x00000018 SizeRef=706,436 Selected=0xD3262A4A
-        DockNode          ID=0x0000001B Parent=0x00000018 SizeRef=706,356 Selected=0x18B8C0DE
-      DockNode            ID=0x00000019 Parent=0x00000016 SizeRef=565,512 Selected=0xC62906FD
-    DockNode              ID=0x00000017 Parent=0x00000005 SizeRef=1168,1038 Split=Y
-      DockNode            ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
-      DockNode            ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
-        DockNode          ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
-          DockNode        ID=0x0000000A Parent=0x00000012 SizeRef=1920,804 Split=X Selected=0xD3262A4A
-            DockNode      ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
-              DockNode    ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
-                DockNode  ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
-                DockNode  ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Selected=0xC62906FD
-              DockNode    ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
-            DockNode      ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
-          DockNode        ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
-            DockNode      ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
-              DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 CentralNode=1 Selected=0x961573DF
-              DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
-            DockNode      ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
-        DockNode          ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
+DockNode                    ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
+  DockNode                  ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
+  DockNode                  ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
+DockSpace                   ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2560,1387 Split=X
+  DockNode                  ID=0x00000018 Parent=0x09EF459F SizeRef=884,1387 Split=Y Selected=0x18B8C0DE
+    DockNode                ID=0x0000001A Parent=0x00000018 SizeRef=1277,690 Selected=0xD3262A4A
+    DockNode                ID=0x0000001B Parent=0x00000018 SizeRef=1277,695 Selected=0x18B8C0DE
+  DockNode                  ID=0x00000019 Parent=0x09EF459F SizeRef=1674,1387 Split=Y
+    DockNode                ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
+      DockNode              ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
+      DockNode              ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
+    DockNode                ID=0x00000005 Parent=0x00000019 SizeRef=1920,384 Split=X
+      DockNode              ID=0x00000016 Parent=0x00000005 SizeRef=307,1038 Selected=0xD3262A4A
+      DockNode              ID=0x00000017 Parent=0x00000005 SizeRef=203,1038 Split=Y
+        DockNode            ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
+        DockNode            ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
+          DockNode          ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
+            DockNode        ID=0x0000000A Parent=0x00000012 SizeRef=1920,804 Split=X Selected=0xD3262A4A
+              DockNode      ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
+                DockNode    ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
+                  DockNode  ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
+                  DockNode  ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Selected=0xC62906FD
+                DockNode    ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
+              DockNode      ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
+            DockNode        ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
+              DockNode      ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
+                DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 CentralNode=1 Selected=0x961573DF
+                DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
+              DockNode      ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
+          DockNode          ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
 
