--- a/imgui.ini
+++ b/imgui.ini
@@ -5,9 +5,9 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,0
-Size=314,371
+Size=364,512
 Collapsed=0
-DockId=0x0000001A,1
+DockId=0x0000001A,0
 
 [Window][Delete?]
 Pos=805,469
@@ -15,16 +15,15 @@ Size=310,118
 Collapsed=0
 
 [Window][Example: Console]
-Pos=909,139
-Size=743,300
+Pos=135,258
+Size=377,254
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000002,0
 
 [Window][Example: Simple layout]
 Pos=909,139
 Size=743,300
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Example: Log]
 Pos=422,19
@@ -45,11 +44,10 @@ DockId=0x00000007,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1122,747
+Size=512,512
 Collapsed=0
 
 [Window][Config]
-Pos=0,0
 Size=314,371
 Collapsed=0
 DockId=0x0000001A,0
@@ -67,8 +65,8 @@ Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Dear ImGui Style Editor]
-Pos=997,47
-Size=339,856
+Pos=1025,115
+Size=1209,1056
 Collapsed=0
 
 [Window][meshlet rasterization]
@@ -182,35 +180,42 @@ Size=975,581
 Collapsed=0
 DockId=0x00000016,2
 
+[Window][Example: Property editor]
+Pos=164,258
+Size=348,254
+Collapsed=0
+DockId=0x0000001E,0
+
 [Docking][Data]
-DockNode                    ID=0x00000001 Pos=909,139 Size=743,600 Split=Y
-  DockNode                  ID=0x00000002 Parent=0x00000001 SizeRef=743,300 Selected=0x32FFF4A6
-  DockNode                  ID=0x00000003 Parent=0x00000001 SizeRef=743,298 Selected=0x46B5E99C
-DockSpace                   ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1122,747 Split=X
-  DockNode                  ID=0x00000018 Parent=0x09EF459F SizeRef=314,1387 Split=Y Selected=0x18B8C0DE
-    DockNode                ID=0x0000001A Parent=0x00000018 SizeRef=1277,690 Selected=0xD3262A4A
-    DockNode                ID=0x0000001B Parent=0x00000018 SizeRef=1277,695 Selected=0x18B8C0DE
-  DockNode                  ID=0x00000019 Parent=0x09EF459F SizeRef=806,1387 Split=Y
-    DockNode                ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
-      DockNode              ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
-      DockNode              ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
-    DockNode                ID=0x00000005 Parent=0x00000019 SizeRef=1920,384 Split=X
-      DockNode              ID=0x00000016 Parent=0x00000005 SizeRef=307,1038 Selected=0xD3262A4A
-      DockNode              ID=0x00000017 Parent=0x00000005 SizeRef=203,1038 Split=Y
-        DockNode            ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
-        DockNode            ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
-          DockNode          ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
-            DockNode        ID=0x0000000A Parent=0x00000012 SizeRef=1920,804 Split=X Selected=0xD3262A4A
-              DockNode      ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
-                DockNode    ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
-                  DockNode  ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
-                  DockNode  ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Selected=0xC62906FD
-                DockNode    ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
-              DockNode      ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
-            DockNode        ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
-              DockNode      ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
-                DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 CentralNode=1 Selected=0x961573DF
-                DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
-              DockNode      ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
-          DockNode          ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
+DockSpace                     ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=512,512 Split=X
+  DockNode                    ID=0x00000018 Parent=0x09EF459F SizeRef=364,1387 Split=Y Selected=0x18B8C0DE
+    DockNode                  ID=0x0000001A Parent=0x00000018 SizeRef=1277,690 Selected=0xE927CF2F
+    DockNode                  ID=0x0000001B Parent=0x00000018 SizeRef=1277,695 Selected=0x18B8C0DE
+  DockNode                    ID=0x00000019 Parent=0x09EF459F SizeRef=146,1387 Split=Y
+    DockNode                  ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
+      DockNode                ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
+      DockNode                ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
+    DockNode                  ID=0x00000005 Parent=0x00000019 SizeRef=1920,384 Split=X
+      DockNode                ID=0x00000016 Parent=0x00000005 SizeRef=307,1038 Selected=0xD3262A4A
+      DockNode                ID=0x00000017 Parent=0x00000005 SizeRef=203,1038 Split=Y
+        DockNode              ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
+        DockNode              ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
+          DockNode            ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
+            DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=1920,804 Split=X Selected=0xD3262A4A
+              DockNode        ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
+                DockNode      ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
+                  DockNode    ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
+                  DockNode    ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Selected=0xC62906FD
+                DockNode      ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
+              DockNode        ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
+            DockNode          ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
+              DockNode        ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
+                DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=Y Selected=0x961573DF
+                  DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=224,256 Split=Y
+                    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=228,256 CentralNode=1
+                    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
+                  DockNode    ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
+                DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
+              DockNode        ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
+          DockNode            ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
 
