Refactor render pass/frame buffer related api

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,0
-Size=364,512
+Size=493,1387
 Collapsed=0
 DockId=0x0000001A,0
 
@@ -44,11 +43,12 @@ DockId=0x00000007,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=512,512
+Size=2560,1387
 Collapsed=0
 
 [Window][Config]
-Size=314,371
+Pos=0,0
+Size=266,756
 Collapsed=0
 DockId=0x0000001A,0
 
@@ -129,10 +129,10 @@ Collapsed=0
 DockId=0x00000011,0
 
 [Window][main viewport]
-Pos=316,0
-Size=806,747
+Pos=268,0
+Size=2292,1387
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000001,0
 
 [Window][Example: Custom Node Graph]
 Pos=411,19
@@ -164,8 +164,8 @@ Size=338,256
 Collapsed=0
 
 [Window][Scene]
-Pos=0,373
-Size=314,374
+Pos=0,758
+Size=266,629
 Collapsed=0
 DockId=0x0000001B,0
 
@@ -186,12 +186,17 @@ Size=348,254
 Collapsed=0
 DockId=0x0000001E,0
 
+[Window][Example: Custom rendering]
+Pos=1018,222
+Size=704,779
+Collapsed=0
+
 [Docking][Data]
-DockSpace                     ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=512,512 Split=X
-  DockNode                    ID=0x00000018 Parent=0x09EF459F SizeRef=364,1387 Split=Y Selected=0x18B8C0DE
-    DockNode                  ID=0x0000001A Parent=0x00000018 SizeRef=1277,690 Selected=0xE927CF2F
-    DockNode                  ID=0x0000001B Parent=0x00000018 SizeRef=1277,695 Selected=0x18B8C0DE
-  DockNode                    ID=0x00000019 Parent=0x09EF459F SizeRef=146,1387 Split=Y
+DockSpace                     ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2560,1387 Split=X
+  DockNode                    ID=0x00000018 Parent=0x09EF459F SizeRef=266,1387 Split=Y Selected=0x18B8C0DE
+    DockNode                  ID=0x0000001A Parent=0x00000018 SizeRef=1277,756 Selected=0xD3262A4A
+    DockNode                  ID=0x0000001B Parent=0x00000018 SizeRef=1277,629 Selected=0x18B8C0DE
+  DockNode                    ID=0x00000019 Parent=0x09EF459F SizeRef=2292,1387 Split=Y
     DockNode                  ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
       DockNode                ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
       DockNode                ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
@@ -212,7 +217,7 @@ DockSpace                     ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=512,5
               DockNode        ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
                 DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=Y Selected=0x961573DF
                   DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=224,256 Split=Y
-                    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=228,256 CentralNode=1
+                    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=228,256 CentralNode=1 Selected=0x961573DF
                     DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
                   DockNode    ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
                 DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
