--- a/imgui.ini
+++ b/imgui.ini
@@ -43,12 +43,12 @@ DockId=0x00000007,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=2560,1387
+Size=512,512
 Collapsed=0
 
 [Window][Config]
-Pos=0,485
-Size=853,349
+Pos=0,179
+Size=269,101
 Collapsed=0
 DockId=0x00000020,0
 
@@ -132,7 +132,7 @@ DockId=0x00000011,0
 Pos=855,0
 Size=841,1387
 Collapsed=0
-DockId=0x00000021,0
+DockId=0x00000001,0
 
 [Window][Example: Custom Node Graph]
 Pos=411,19
@@ -164,8 +164,8 @@ Size=338,256
 Collapsed=0
 
 [Window][Scene]
-Pos=0,836
-Size=853,551
+Pos=0,282
+Size=269,230
 Collapsed=0
 DockId=0x0000001B,0
 
@@ -192,63 +192,67 @@ Size=704,779
 Collapsed=0
 
 [Window][Compose Pass]
-Pos=1698,0
-Size=862,1387
+Pos=0,282
+Size=269,230
 Collapsed=0
-DockId=0x00000022,0
+DockId=0x0000001B,3
 
 [Window][Gizmo Pass]
-Pos=0,0
-Size=853,483
+Pos=0,282
+Size=269,230
 Collapsed=0
-DockId=0x0000001F,1
+DockId=0x0000001B,1
 
 [Window][Gbuffer normal]
-Pos=855,0
-Size=841,1387
-Collapsed=0
-DockId=0x00000021,0
-
-[Window][Gbuffer depth]
 Pos=0,0
-Size=853,483
+Size=269,177
 Collapsed=0
 DockId=0x0000001F,0
 
+[Window][Gbuffer depth]
+Pos=0,282
+Size=269,230
+Collapsed=0
+DockId=0x0000001B,2
+
+[Window][Compute Gbuffer normal]
+Pos=271,0
+Size=241,512
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockSpace                       ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=2560,1387 Split=X
-  DockNode                      ID=0x00000018 Parent=0x09EF459F SizeRef=853,1387 Split=Y Selected=0x18B8C0DE
-    DockNode                    ID=0x0000001A Parent=0x00000018 SizeRef=1277,834 Split=Y Selected=0xD3262A4A
-      DockNode                  ID=0x0000001F Parent=0x0000001A SizeRef=853,483 Selected=0xAFC7D0D1
-      DockNode                  ID=0x00000020 Parent=0x0000001A SizeRef=853,349 Selected=0xD3262A4A
-    DockNode                    ID=0x0000001B Parent=0x00000018 SizeRef=1277,551 Selected=0x18B8C0DE
-  DockNode                      ID=0x00000019 Parent=0x09EF459F SizeRef=1705,1387 Split=Y
-    DockNode                    ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
-      DockNode                  ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
-      DockNode                  ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
-    DockNode                    ID=0x00000005 Parent=0x00000019 SizeRef=1920,384 Split=X
-      DockNode                  ID=0x00000016 Parent=0x00000005 SizeRef=307,1038 Selected=0xD3262A4A
-      DockNode                  ID=0x00000017 Parent=0x00000005 SizeRef=203,1038 Split=Y
-        DockNode                ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
-        DockNode                ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
-          DockNode              ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
-            DockNode            ID=0x0000000A Parent=0x00000012 SizeRef=1920,804 Split=X Selected=0xD3262A4A
-              DockNode          ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
-                DockNode        ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
-                  DockNode      ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
-                  DockNode      ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Selected=0xC62906FD
-                DockNode        ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
-              DockNode          ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
-            DockNode            ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
-              DockNode          ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
-                DockNode        ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=Y Selected=0x961573DF
-                  DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=224,256 Split=Y
-                    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=228,256 Split=X Selected=0x961573DF
-                      DockNode  ID=0x00000021 Parent=0x00000001 SizeRef=841,822 CentralNode=1 Selected=0xE46A3796
-                      DockNode  ID=0x00000022 Parent=0x00000001 SizeRef=862,822 Selected=0x290BE0CE
-                    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
-                  DockNode      ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
-                DockNode        ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
-              DockNode          ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
-          DockNode              ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
+DockSpace                     ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=512,512 Split=X
+  DockNode                    ID=0x00000018 Parent=0x09EF459F SizeRef=269,1387 Split=Y Selected=0x18B8C0DE
+    DockNode                  ID=0x0000001A Parent=0x00000018 SizeRef=1277,760 Split=Y Selected=0xD3262A4A
+      DockNode                ID=0x0000001F Parent=0x0000001A SizeRef=853,483 Selected=0xE46A3796
+      DockNode                ID=0x00000020 Parent=0x0000001A SizeRef=853,275 Selected=0xD3262A4A
+    DockNode                  ID=0x0000001B Parent=0x00000018 SizeRef=1277,625 Selected=0x290BE0CE
+  DockNode                    ID=0x00000019 Parent=0x09EF459F SizeRef=241,1387 Split=Y
+    DockNode                  ID=0x00000004 Parent=0x00000019 SizeRef=1920,126 Split=X Selected=0x2B5F260E
+      DockNode                ID=0x0000001C Parent=0x00000004 SizeRef=1194,508 Selected=0xC90DB54B
+      DockNode                ID=0x0000001D Parent=0x00000004 SizeRef=724,508 Selected=0x2B5F260E
+    DockNode                  ID=0x00000005 Parent=0x00000019 SizeRef=1920,384 Split=X
+      DockNode                ID=0x00000016 Parent=0x00000005 SizeRef=307,1038 Selected=0xD3262A4A
+      DockNode                ID=0x00000017 Parent=0x00000005 SizeRef=203,1038 Split=Y
+        DockNode              ID=0x00000014 Parent=0x00000017 SizeRef=1920,794 Selected=0xCE70D424
+        DockNode              ID=0x00000015 Parent=0x00000017 SizeRef=1920,242 Split=X
+          DockNode            ID=0x00000012 Parent=0x00000015 SizeRef=608,1038 Split=Y
+            DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=1920,804 Split=X Selected=0xD3262A4A
+              DockNode        ID=0x0000000C Parent=0x0000000A SizeRef=1287,197 Split=X Selected=0xD3262A4A
+                DockNode      ID=0x0000000E Parent=0x0000000C SizeRef=671,522 Split=X Selected=0x93643EC0
+                  DockNode    ID=0x00000010 Parent=0x0000000E SizeRef=662,843 Selected=0x93643EC0
+                  DockNode    ID=0x00000011 Parent=0x0000000E SizeRef=689,843 Selected=0xC62906FD
+                DockNode      ID=0x0000000F Parent=0x0000000C SizeRef=614,522 Selected=0x7AE6544D
+              DockNode        ID=0x0000000D Parent=0x0000000A SizeRef=631,197 Selected=0x049DDB72
+            DockNode          ID=0x0000000B Parent=0x00000012 SizeRef=1920,24 Split=X
+              DockNode        ID=0x00000006 Parent=0x0000000B SizeRef=332,1038 Split=X Selected=0xD3262A4A
+                DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1292,1038 Split=Y Selected=0x961573DF
+                  DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=224,256 Split=Y
+                    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=228,256 CentralNode=1 Selected=0x519AB3AB
+                    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=228,254 Selected=0x46B5E99C
+                  DockNode    ID=0x0000001E Parent=0x00000008 SizeRef=224,254 Selected=0x593C5C9B
+                DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=626,1038 Selected=0xB39CC568
+              DockNode        ID=0x00000007 Parent=0x0000000B SizeRef=1586,1038 Selected=0x0DA19904
+          DockNode            ID=0x00000013 Parent=0x00000015 SizeRef=1310,1038 Selected=0x48642754
 
